folio-prod/securitypolicy/ip_list.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: patch-placeholder
spec:
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
          ## AWS EC2 for Sinopia Stage Airflow
          - "54.245.203.243/32"
          ## Lane's Google Cloud Infrastructure
          - "35.203.130.101/32"
          - "35.203.131.135/32"
          - "35.192.213.120/32"
          - "104.198.197.19/32"
          ## Lane's Stanford Health Care data center infrastructure
          - "10.142.204.81/32"
          - "10.142.204.82/32"
          ## Caiasoft
          - "52.9.21.118/32"
          - "54.153.8.197/32"
          - "52.53.107.5/32"
          - "18.144.135.31/32"
          - "23.244.192.27/32"
          ## Atlas Systems for Hoover's Aeon (developer, sandbox, production)
          - "216.54.57.225/32"
          - "20.230.202.69/32"
          - "52.175.234.32/32"
          ## Atlas Systems for SUL's Aeon (sandbox, production)
          - "20.29.204.55/32"
          - "52.250.48.144/32"
          ## Harrassowitz's IP ranges
          - "62.153.143.224/28"
          - "87.129.225.56/29"
          ## General Stanford network range
          - "171.64.0.0/14"
          - "171.66.1.0/24"
          ## ILS Staff Users (Stanford VPN)
          - "10.32.0.0/15"
          - "10.34.0.0/15"
          - "10.96.0.0/11"
          - "10.98.0.0/15"
          - "10.130.0.0/16"
          - "10.130.64.0/18"
          - "10.130.128.0/18"
          - "10.130.192.0/18"
          - "172.20.206.128/25"
          - "172.20.207.0/25"
          - "204.63.231.0/25"
          - "10.109.48.0/25"
          - "10.109.48.128/25"
          - "171.66.16.0/21"
          - "171.66.24.0/21"
          - "171.66.176.0/20"
